--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A bot that is trading",
   "main": "app.js",
   "dependencies": {
+    "ansi": "^0.3.1",
     "binance": "https://github.com/jetpackpony/binance/tarball/master",
     "nconf": "^0.10.0",
     "ramda": "^0.25.0"
