--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "ansi": "^0.3.1",
     "binance": "https://github.com/jetpackpony/binance/tarball/cef1c651d3aa3d9e0828085626c4e1844a34a6e1",
+    "csv-reorder": "^0.1.1",
     "fast-csv": "^2.4.1",
     "inquirer": "^5.0.0",
     "math-precision": "^1.0.4",
