--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "fast-csv": "^2.4.1",
     "inquirer": "^5.0.0",
     "math-precision": "^1.0.4",
+    "mathjs": "^3.19.0",
     "moment": "^2.20.1",
     "nconf": "^0.10.0",
-    "ramda": "^0.25.0"
+    "ramda": "^0.25.0",
+    "sleep": "^5.1.1"
   },
   "devDependencies": {},
   "scripts": {
