--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ansi": "^0.3.1",
     "binance": "https://github.com/jetpackpony/binance/tarball/cef1c651d3aa3d9e0828085626c4e1844a34a6e1",
     "chai": "^4.1.2",
+    "console.table": "^0.9.1",
     "csv-reorder": "^0.1.1",
     "fast-csv": "^2.4.1",
     "inquirer": "^5.0.0",
