--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "csv-reorder": "^0.1.1",
     "fast-csv": "^2.4.1",
     "inquirer": "^5.0.0",
+    "keras-js": "^1.0.2",
     "math-precision": "^1.0.4",
     "mathjs": "^3.19.0",
     "mocha": "^4.1.0",
