--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "keras-js": "^1.0.2",
     "math-precision": "^1.0.4",
     "mathjs": "^3.19.0",
+    "minimist": "^1.2.0",
     "mocha": "^4.1.0",
     "moment": "^2.20.1",
     "nconf": "^0.10.0",
