Add a simple chart renderer

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "minimist": "^1.2.0",
     "mocha": "^4.1.0",
     "moment": "^2.20.1",
+    "mustache": "^2.3.0",
     "nconf": "^0.10.0",
     "ramda": "^0.25.0",
     "sleep": "^5.1.1",
